objects/Original_Sales_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Close_Date__c</fullName>
        <label>Original Close Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Plan_Year__c</fullName>
        <label>Sales Plan Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dallas Hodgson</fullName>
                </value>
                <value>
                    <fullName>Scott Clymer</fullName>
                </value>
                <value>
                    <fullName>Josh Murphy</fullName>
                </value>
                <value>
                    <fullName>Sanjay Shukla</fullName>
                </value>
                <value>
                    <fullName>House Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Original Sales Plan</label>
    <nameField>
        <label>Original Sales Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Original Sales Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>